--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "theo-playground-socket-server",
     "version": "1.0.0",
     "description": "",
+    "type": "module",
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
@@ -12,7 +13,8 @@
     "dependencies": {
         "http": "^0.0.1-security",
         "socket.io": "^4.7.4",
-        "ts-node": "^10.9.2"
+        "ts-node": "^10.9.2",
+        "typescript": "^5.3.3"
     },
     "devDependencies": {
         "@types/node": "^20.11.20"
