--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
     "name": "theo-playground-socket-server",
     "version": "1.0.0",
     "description": "",
-    "type": "module",
     "main": "index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "node": "ts-node ./index.ts"
+        "start": "npm run build:live",
+        "node": "ts-node ./src/index.ts",
+        "build": "tsc -p .",
+        "build:live": "nodemon --watch '*.ts' --exec 'ts-node' ./src/index.ts"
     },
     "author": "",
     "license": "ISC",
@@ -17,6 +19,7 @@
         "typescript": "^5.3.3"
     },
     "devDependencies": {
-        "@types/node": "^20.11.20"
+        "@types/node": "^20.11.20",
+        "nodemon": "^3.1.0"
     }
 }
