--- a/package.json
+++ b/package.json
@@ -1,25 +1,29 @@
 {
-    "name": "theo-playground-socket-server",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
-        "start": "npm run build:live",
-        "node": "ts-node ./src/index.ts",
-        "build": "tsc -p .",
-        "build:live": "nodemon --watch '*.ts' --exec 'ts-node' ./src/index.ts"
-    },
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "http": "^0.0.1-security",
-        "socket.io": "^4.7.4",
-        "ts-node": "^10.9.2",
-        "typescript": "^5.3.3"
-    },
-    "devDependencies": {
-        "@types/node": "^20.11.20",
-        "nodemon": "^3.1.0"
-    }
+  "name": "theo-playground-socket-server",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "npm run build:live",
+    "node": "ts-node ./src/index.ts",
+    "build": "tsc -p .",
+    "build:live": "nodemon --watch '*.ts' --exec 'ts-node' ./src/index.ts"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "@prisma/client": "^5.10.2",
+    "http": "^0.0.1-security",
+    "mongodb": "^6.4.0",
+    "socket.io": "^4.7.4"
+  },
+  "devDependencies": {
+    "@types/node": "^20.11.25",
+    "nodemon": "^3.1.0",
+    "prisma": "^5.10.2",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.2"
+  },
+  "keywords": []
 }
